[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py4D-browser-flexloader"
dynamic = ["version"]
authors = [
  { name="Chia-Hao Lee", email="chia-hao.lee@cornell.edu" },
]
description = "py4D-browser plugin for flexible HDF5 and Zarr dataset loading"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "py4d-browser >= 1.5.0",
  "py4dstem >= 0.14.9",
  "numpy >= 1.19",
  "h5py",
  "zarr",
  "PyQt5 >= 5.10",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/chiahao3/py4D-browser-flexloader"
"Repository" = "https://github.com/chiahao3/py4D-browser-flexloader"
"Bug Tracker" = "https://github.com/chiahao3/py4D-browser-flexloader/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "py4d_browser_plugin.flexloader.__version__"}
